Fixing text overflow

--- a/src/style.css
+++ b/src/style.css
@@ -136,7 +136,7 @@ a {
   font-weight: 450;
 }
 .theme-button:hover {
-  opacity: 80%;
+  opacity: 81%;
 }
 
 body.dark {
